Upgrade to 2.0.0